--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,48 @@
-style.css
+/*BODY*/
+body{
+	padding: 0;
+	margin: 0 auto;
+	overflow-x: hidden;
+}
+/*BACKGROUND FIRST SECTION*/
+.first-section{
+	background-image: url(../img/header-bg.jpg);
+	height: 100vh;
+	background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-position-y:-137px;
+}
+/*NAVBAR - MENU */
+.navbar-brand {
+    font-family: 'Kaushan Script', cursive;
+    color: rgba(241, 196, 15,1.0);
+    font-size: 27px;
+    padding: 25px;
+}
+
+.nav{
+	font-size: 16px;
+    padding: 8px;
+    background-color: none;
+}
+
+.nav a{
+	color: #ffffff;
+}
+
+.nav a:hover{
+	color: rgba(241, 196, 15,1.0);
+	background-color: hidden;
+}
+/*PREGUNTAR A ALE*/
+.nav>li>a:focus, .nav>li>a:hover {
+    text-decoration: none;
+    background-color: none;
+}
+
+.nav .amarillo{
+	color:rgba(241, 196, 15,1.0);
+}
+
+/*BIENVENIDA*/
