--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,18 @@ body{
 	padding: 0;
 	margin: 0 auto;
 	overflow-x: hidden;
-}
-/*BACKGROUND FIRST SECTION*/
-.first-section{
 	background-image: url(../img/header-bg.jpg);
-	height: 100vh;
 	background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-position-y:-137px;
+
 }
+
 /*NAVBAR - MENU */
 .navbar-brand {
     font-family: 'Kaushan Script', cursive;
-    color: rgba(241, 196, 15,1.0);
+    color:#fec503;
     font-size: 27px;
     padding: 25px;
 }
@@ -32,7 +30,7 @@ body{
 }
 
 .nav a:hover{
-	color: rgba(241, 196, 15,1.0);
+	color:#fec503;
 	background-color: hidden;
 }
 /*PREGUNTAR A ALE*/
@@ -42,9 +40,18 @@ body{
 }
 
 .nav .amarillo{
-	color:rgba(241, 196, 15,1.0);
+	color:#fec503;
 }
 
+.menu-mobile{
+	background-color:#fec503;
+	color:#ffffff;
+	padding: 10px;
+	border-radius: 10px;
+}
+.menu-mobile .fa{
+	border-radius: 10px;
+}
 /*BIENVENIDA*/
 
 .first-section h1 {
@@ -59,5 +66,32 @@ body{
     font-size: 44px;
 }
 .font-welcome{
-	font-family: 'Merriweather', serif;
+  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-style: italic;
+  font-size: 22px;
+  line-height: 22px;
+  margin-bottom: 25px;
 }
+
+.tellmemore {
+    color: #ffffff;
+    background-color: #fed136;
+    padding: 21px;
+    padding-left: 38px;
+    padding-right: 38px;
+    /* border: 10px; */
+    border-radius: 17px;
+    font-size: 22px;
+    font-weight: 900;
+}
+.first-section .tell a{
+	text-decoration: none;
+}
+.first-section .tell a:hover{
+	color: black;
+}
+.tell{
+	padding-top: 50px;
+}
+
+
