--- a/css/media.css
+++ b/css/media.css
@@ -1,1 +1,10 @@
-media.css
+@media (min-width:1px) and (max-width: 678px){
+	body{
+	
+	}
+	.menu-color{
+		background-color: transparent;
+	}
+}
+
+
